atualizado erro de input

--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
         </div>
         
         <nav class="nav">
+            <a href="https://www.ifood.com.br/" target="_blank">
             <img src="./assents/logo-ifood.svg" class="imgNav" alt="ifood logo">
+            </a>
             <div class="containerLinks">
                 <ul>
                     <li><a href="#">Comidas mais procuradas</a></li>
                     <li><a href="#">Restaurantes</a></li>
                     <li><a href="#">Cupons</a></li>
-                    <li><a href="#">Contatos</a></li>
+                    <li><a href="#duvidas">Dúvidas</a></li>
                 </ul>
             </div>
             <div class="search-container">
@@ -79,7 +81,7 @@
             </h2>
         </section>
 
-        <section class="section5">
+        <section id="duvidas" class="section5">
             <form action="#" method="post">
             <h2 class="section5-titulo">
                 Dúvidas
