Add section Cupons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
     <link rel="shortcut icon" href="assents/icon_Ifood.png" type="image/x-icon">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
@@ -79,6 +80,18 @@
             <h2 class="section4-titulo">
                 Cupons
             </h2>
+            <div class="cupons">
+                <div class="top-buttons">
+                  <a href="#" class="cupom-botao" onclick="mostrarCupom('R$50 OFF na primeira compra')">R$50 OFF na primeira compra</a>
+                  <a href="#" class="cupom-botao" onclick="mostrarCupom('20% OFF')">20% OFF</a>
+                  <a href="#" class="cupom-botao" onclick="mostrarCupom('R$10 OFF')">R$10 OFF</a>
+                </div>
+                <div class="bottom-buttons">
+                  <a href="#" class="cupom-botao" onclick="mostrarCupom('15% OFF')">15% OFF</a>
+                  <a href="#" class="cupom-botao" onclick="mostrarCupom('FRETE GRATIS')">FRETE GRATIS</a>
+                  <a href="#" class="cupom-botao" onclick="mostrarCupom('10% OFF')">10% OFF</a>
+                </div>
+              </div>
         </section>
 
         <section id="duvidas" class="section5">
