add section Restaurantes e pequenas alteracoes

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             </a>
             <div class="containerLinks">
                 <ul>
-                    <li><a href="#">Comidas mais procuradas</a></li>
-                    <li><a href="#">Restaurantes</a></li>
-                    <li><a href="#">Cupons</a></li>
+                    <li><a href="#comidas">Comidas mais procuradas</a></li>
+                    <li><a href="#restaurantes">Restaurantes</a></li>
+                    <li><a href="#cupons">Cupons</a></li>
                     <li><a href="#duvidas">Dúvidas</a></li>
                 </ul>
             </div>
@@ -65,18 +65,55 @@
                 <a href="#" target="_blank" class="section1-botao">Ver Novo Catálogo</a>
             </div>
         </section><br>
-        <section class="section2" id="section2">
+
+        <section id="comidas" class="section2">
             <h2 class="section2-titulo">
             Comidas mais procuradas
-        </h2>
-        </section>
-        <section class="section3">
-            <h2 class="section3-titulo">
-            Restaurantes
-        </h2>
+            </h2>
+            <div>
+                <div>
+
+                </div>
+
+
+                <div class="ver-mais">
+                    <a href="#">Ver mais</a>
+                </div>
+            </div>
         </section>
 
-        <section class="section4">
+
+        <section id="restaurantes" class="section3">
+            <h2 class="section3-titulo">
+            Melhores Restaurantes
+            </h2>
+            <div class="restaurantes">
+                <div class="icones-restaurantes">
+                    <a href="https://www.burgerking.com.br/" target="_blank">
+                        <img src="./assents/bk.svg" alt="">
+                    </a>
+                    <a href="https://www.gendai.com.br/" target="_blank">
+                        <img src="./assents/gendai.svg" alt="">
+                    </a>
+                    <a href="https://www.hardrockcafe.com/location/fortaleza/pt/" target="_blank">
+                        <img src="./assents/hardrock.svg" alt="">
+                    </a>
+                    <a href="https://onne.link/president_jacquin" target="_blank">
+                        <img src="./assents/president.svg" alt="">
+                    </a>
+                    <a href="https://www.outback.com.br/" target="_blank">
+                        <img src="./assents/outback.svg" alt="">
+                    </a>
+                  </div>
+                <div class="ver-mais">
+                    <a href="#">Ver mais</a>
+                </div>
+
+            </div>
+        </section>
+
+
+        <section id="cupons" class="section4">
             <h2 class="section4-titulo">
                 Cupons
             </h2>
