--- a/index.html
+++ b/index.html
@@ -79,16 +79,72 @@
             <h2 class="section2-titulo">
                 Comidas mais procuradas
             </h2>
-            <div>
-                <div>
+            <section>
+            <div class="areaSection">
+                <article class="container">
+                    <figure>
+                        <img src="./assents/lanches.svg" alt="lanches" class="image">
+                        <figcaption class="descricao">
+                            <div class="TextContainer"><h3>Lanches</h3></div>
+                                <h5>x-burguer, x-salada, x-bacon, x-tudo...</h5>
+                        </figcaption>
+                    </figure>
+                </article>
 
-                </div>
+                <article class="container">
+                    <figure>
+                        <img src="./assents/porcoes.svg" alt="porções" class="image">
+                        <figcaption class="descricao">
+                            <div class="TextContainer"><h3>Porções</h3></div>
+                                <h5>batata frita, bolinhas de queijo, calabresa, mandioca...</h5>
+                        </figcaption>
+                    </figure>
+                </article>
 
+                <article class="container">
+                    <figure>
+                        <img src="./assents/acai.svg" alt="Açai" class="image">
+                        <figcaption class="descricao">
+                            <div class="TextContainer"><h3>Açaí</h3></div>
+                                <h5>banana, leite condensado, M&M, caldas...</h5>
+                        </figcaption>
+                    </figure>
+                </article>
 
-                <div class="ver-mais">
-                    <a href="#">Ver mais</a>
-                </div>
+                <article class="container">
+                    <figure>
+                        <img src="./assents/sushi.svg" alt="Sushi" class="image">
+                        <figcaption class="descricao">
+                            <div class="TextContainer"><h3>Comida Japonesa</h3></div>
+                                <h5>sushi, sashimi, temaki, hor roll...</h5>
+                        </figcaption>
+                    </figure>
+                </article>
+
+                <article class="container">
+                    <figure>
+                        <img src="./assents/pizza.svg" alt="Pizzas" class="image">
+                        <figcaption class="descricao">
+                            <div class="TextContainer"><h3>Pizzas</h3></div>
+                                <h5>mussarela, frango, portuguesa, broto...</h5>
+                        </figcaption>
+                    </figure>
+                </article>
+
+                <article class="container">
+                    <figure>
+                        <img src="./assents/bolos.svg" alt="Bolos" class="image">
+                        <figcaption class="descricao">
+                            <div class="TextContainer"><h3>Bolos</h3></div>
+                                <h5>chocolate, cenoura, ovomaltine, ninho...</h5>
+                        </figcaption>
+                    </figure>
+                </article>
             </div>
+            <div class="ver-mais">
+                <a href="#">Ver mais</a>
+            </div>
+            </section>
         </section>
 
         <!-- Restaurantes -->
