ajustando css responsivo

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>Delivery de Comida e Mercado - iFood</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
-    <link rel="shortcut icon" href="assents/icon_Ifood.png" type="image/x-icon">
     <link rel="shortcut icon" href="assents/ifood-icone.png" type="image/x-icon">
-    <script src="script.js"></script>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
@@ -59,91 +59,100 @@
         </nav>
     </header>
 
+    <section class="section1">
+        <div class="section1-conteudo">
+            <h1 class="section1-titulo">
+                Não fique com fome!
+            </h1>
+            <p class="section1-paragrafo">
+                Navegue pelo novo site do iFood, escolhendo os melhores pratos e aproveitando as novas promoções e
+                cupons disponíveis por tempo limitado.
+            </p>
+            <a href="#" target="_blank" class="section1-botao">Ver Novo Catálogo</a>
+        </div>
+    </section>
+
+    <!-- Comidas mais procuradas -->
     <main>
-        <section class="section1">
-            <div class="section1-conteudo">
-                <h1 class="section1-titulo">
-                    Não fique com fome!
-                </h1>
-                <p class="section1-paragrafo">
-                    Navegue pelo novo site do iFood, escolhendo os melhores pratos e aproveitando as novas promoções e
-                    cupons disponíveis por tempo limitado.
-                </p>
-                <a href="#" target="_blank" class="section1-botao">Ver Novo Catálogo</a>
-            </div>
-        </section>
-
-        <!-- Comidas mais procuradas -->
-
         <section id="comidas" class="section2">
-            <h2 class="section2-titulo">
-                Comidas mais procuradas
-            </h2>
+            <h2 class="section2-titulo">Comidas mais procuradas</h2>
             <section>
-            <div class="areaSection">
-                <article class="container">
-                    <figure>
-                        <img src="./assents/lanches.svg" alt="lanches" class="image">
-                        <figcaption class="descricao">
-                            <div class="TextContainer"><h3>Lanches</h3></div>
+                <div class="areaSection">
+                    <article class="container">
+                        <figure>
+                            <img src="./assents/lanches.svg" alt="lanches" class="image">
+                            <figcaption class="descricao">
+                                <div class="TextContainer">
+                                    <h3>Lanches</h3>
+                                </div>
                                 <h5>x-burguer, x-salada, x-bacon, x-tudo...</h5>
-                        </figcaption>
-                    </figure>
-                </article>
+                            </figcaption>
+                        </figure>
+                    </article>
 
-                <article class="container">
-                    <figure>
-                        <img src="./assents/porcoes.svg" alt="porções" class="image">
-                        <figcaption class="descricao">
-                            <div class="TextContainer"><h3>Porções</h3></div>
+                    <article class="container">
+                        <figure>
+                            <img src="./assents/porcoes.svg" alt="porções" class="image">
+                            <figcaption class="descricao">
+                                <div class="TextContainer">
+                                    <h3>Porções</h3>
+                                </div>
                                 <h5>batata frita, bolinhas de queijo, calabresa, mandioca...</h5>
-                        </figcaption>
-                    </figure>
-                </article>
+                            </figcaption>
+                        </figure>
+                    </article>
 
-                <article class="container">
-                    <figure>
-                        <img src="./assents/acai.svg" alt="Açai" class="image">
-                        <figcaption class="descricao">
-                            <div class="TextContainer"><h3>Açaí</h3></div>
+                    <article class="container">
+                        <figure>
+                            <img src="./assents/acai.svg" alt="Açai" class="image">
+                            <figcaption class="descricao">
+                                <div class="TextContainer">
+                                    <h3>Açaí</h3>
+                                </div>
                                 <h5>banana, leite condensado, M&M, caldas...</h5>
-                        </figcaption>
-                    </figure>
-                </article>
+                            </figcaption>
+                        </figure>
+                    </article>
 
-                <article class="container">
-                    <figure>
-                        <img src="./assents/sushi.svg" alt="Sushi" class="image">
-                        <figcaption class="descricao">
-                            <div class="TextContainer"><h3>Comida Japonesa</h3></div>
+                    <article class="container">
+                        <figure>
+                            <img src="./assents/sushi.svg" alt="Sushi" class="image">
+                            <figcaption class="descricao">
+                                <div class="TextContainer">
+                                    <h3>Comida Japonesa</h3>
+                                </div>
                                 <h5>sushi, sashimi, temaki, hor roll...</h5>
-                        </figcaption>
-                    </figure>
-                </article>
+                            </figcaption>
+                        </figure>
+                    </article>
 
-                <article class="container">
-                    <figure>
-                        <img src="./assents/pizza.svg" alt="Pizzas" class="image">
-                        <figcaption class="descricao">
-                            <div class="TextContainer"><h3>Pizzas</h3></div>
+                    <article class="container">
+                        <figure>
+                            <img src="./assents/pizza.svg" alt="Pizzas" class="image">
+                            <figcaption class="descricao">
+                                <div class="TextContainer">
+                                    <h3>Pizzas</h3>
+                                </div>
                                 <h5>mussarela, frango, portuguesa, broto...</h5>
-                        </figcaption>
-                    </figure>
-                </article>
+                            </figcaption>
+                        </figure>
+                    </article>
 
-                <article class="container">
-                    <figure>
-                        <img src="./assents/bolos.svg" alt="Bolos" class="image">
-                        <figcaption class="descricao">
-                            <div class="TextContainer"><h3>Bolos</h3></div>
+                    <article class="container">
+                        <figure>
+                            <img src="./assents/bolos.svg" alt="Bolos" class="image">
+                            <figcaption class="descricao">
+                                <div class="TextContainer">
+                                    <h3>Bolos</h3>
+                                </div>
                                 <h5>chocolate, cenoura, ovomaltine, ninho...</h5>
-                        </figcaption>
-                    </figure>
-                </article>
-            </div>
-            <div class="ver-mais">
-                <a href="#">Ver mais</a>
-            </div>
+                            </figcaption>
+                        </figure>
+                    </article>
+                </div>
+                <div class="ver-mais">
+                    <a href="#">Ver mais</a>
+                </div>
             </section>
         </section>
 
@@ -196,26 +205,26 @@
                 </div>
             </div>
         </section>
-
-        <section id="duvidas" class="section5">
-            <form action="#" method="post">
-                <h2 class="section5-titulo">Dúvidas</h2>
-                <div class="inputs-form">
-                    <input type="text" id="nome" name="nome" placeholder="Digite seu nome">
-                    <input type="email" id="email" name="email" placeholder="Digite seu e-mail">
-                </div>
-                <br>
-                <textarea name="feedback" id="feedback" cols="48" rows="10"
-                    placeholder="Deixe seu comentário ou feedback...">
-                </textarea>
-                <br>
-
-                <a href="#" target="_blank" class="section5-botao">Enviar</a>
-
-            </form>
-
-        </section>
     </main>
+    <section id="duvidas" class="section5">
+        <form action="#" method="post">
+            <h2 class="section5-titulo">Dúvidas</h2>
+            <div class="inputs-form">
+                <input type="text" id="nome" name="nome" placeholder="Digite seu nome">
+                <input type="email" id="email" name="email" placeholder="Digite seu e-mail">
+            </div>
+            <br>
+            <textarea name="feedback" id="feedback" cols="48" rows="10"
+                placeholder="Deixe seu comentário ou feedback...">
+                </textarea>
+            <br>
+
+            <a href="#" target="_blank" class="section5-botao">Enviar</a>
+
+        </form>
+    </section>
+
+    <!-- Footer -->
     <footer>
         <div class="direitosReservados">
             <h6>© Copyright 2023 - iFood - Todos os direitos reservados</h6>
@@ -252,6 +261,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="./scripts/cupons.js"></script>
 </body>
 
 </html>
