--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </a>
             <div class="containerLinks">
                 <ul>
-                    <li><a href="#comidas">Comidas mais procuradas</a></li>
+                    <li><a href="#comidas">Comidas</a></li>
                     <li><a href="#restaurantes">Restaurantes</a></li>
                     <li><a href="#cupons">Cupons</a></li>
                     <li><a href="#duvidas">Dúvidas</a></li>
@@ -192,8 +192,9 @@
             <h2 class="section4-titulo">Cupons</h2>
             <div class="cupons">
                 <div class="top-buttons">
-                    <a href="#" class="cupom-botao" onclick="mostrarCupom('R$50 OFF na primeira compra', '50$OFF')">R$50
-                        OFF na primeira compra</a>
+                    <a href="#" class="cupom-botao" onclick="mostrarCupom('R$50 OFF na primeira compra', '50$OFF')">
+                        R$50 OFF na primeira compra
+                    </a>
                     <a href="#" class="cupom-botao" onclick="mostrarCupom('20% OFF', '20%OFF')">20% OFF</a>
                     <a href="#" class="cupom-botao" onclick="mostrarCupom('R$10 OFF', '10$OFF')">R$10 OFF</a>
                 </div>
@@ -206,6 +207,8 @@
             </div>
         </section>
     </main>
+
+    <!-- Formulário -->
     <section id="duvidas" class="section5">
         <form action="#" method="post">
             <h2 class="section5-titulo">Dúvidas</h2>
