deixando cupons flexiveis

--- a/index.html
+++ b/index.html
@@ -189,20 +189,30 @@
 
         <!-- Cupons -->
         <section id="cupons" class="section4">
-            <h2 class="section4-titulo">Cupons</h2>
             <div class="cupons">
-                <div class="top-buttons">
-                    <a href="#" class="cupom-botao" onclick="mostrarCupom('R$50 OFF na primeira compra', '50$OFF')">
+                <h2 class="section4-titulo">Cupons</h2>
+                <div class="buttons-container">
+                    <button class="cupom-botao" onclick="mostrarCupom('R$50 OFF na primeira compra', '50$OFF')">
                         R$50 OFF na primeira compra
-                    </a>
-                    <a href="#" class="cupom-botao" onclick="mostrarCupom('20% OFF', '20%OFF')">20% OFF</a>
-                    <a href="#" class="cupom-botao" onclick="mostrarCupom('R$10 OFF', '10$OFF')">R$10 OFF</a>
-                </div>
-                <div class="bottom-buttons">
-                    <a href="#" class="cupom-botao" onclick="mostrarCupom('15% OFF', '15%OFF')">15% OFF</a>
-                    <a href="#" class="cupom-botao" onclick="mostrarCupom('FRETE GRATIS', 'FRETEGRATIS')">FRETE
-                        GRÁTIS</a>
-                    <a href="#" class="cupom-botao" onclick="mostrarCupom('10% OFF', '10%OFF')">10% OFF</a>
+                    </button>
+
+                    <button class="cupom-botao" onclick="mostrarCupom('20% OFF', '20%OFF')">
+                        20% OFF
+                    </button>
+
+                    <button class="cupom-botao" onclick="mostrarCupom('R$10 OFF', '10$OFF')">
+                        R$10 OFF
+                    </button>
+
+                    <button class="cupom-botao" onclick="mostrarCupom('15% OFF', '15%OFF')">
+                        15% OFF
+                    </button>
+                    <button class="cupom-botao" onclick="mostrarCupom('FRETE GRATIS', 'FRETEGRATIS')">
+                        FRETE GRÁTIS
+                    </button>
+                    <button class="cupom-botao" onclick="mostrarCupom('10% OFF', '10%OFF')">
+                        10% OFF
+                    </button>
                 </div>
             </div>
         </section>
