segunda versão menu responsivo e footer

--- a/index.html
+++ b/index.html
@@ -255,22 +255,22 @@
         </div>
 
         <div class="contatos">
-            <div class="imagesfooter">
+            <div class="imagesFooter">
                 <a href="https://www.facebook.com/iFood" target="_blank">
                     <img src="./assents/logo-facebook.svg" alt="facebook">
                 </a>
             </div>
-            <div class="imagesfooter">
+            <div class="imagesFooter">
                 <a href="https://twitter.com/iFood" target="_blank">
                     <img src="./assents/logo-twitter.svg" alt="twitter">
                 </a>
             </div>
-            <div class="imagesfooter">
+            <div class="imagesFooter">
                 <a href="https://www.youtube.com/@ifood" target="_blank">
                     <img src="./assents/logo-youtube.svg" alt="youtube">
                 </a>
             </div>
-            <div class="imagesfooter">
+            <div class="imagesFooter">
                 <a href="https://www.instagram.com/ifoodbrasil/" target="_blank">
                     <img src="./assents/logo-instagram.svg" alt="instagram">
                 </a>
