--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     </footer>
 
     <script src="./scripts/cupons.js"></script>
-    <script src="teste/mobileNavBar.js"></script>
+    <script src="/scripts/menuHamburguer.js"></script>
 </body>
 
 </html>
